:bug: Fixing overlaping of rrss

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
   align-items: center;
   flex-direction: column;
   flex: 1;
+  padding-bottom: 2.5em;
 }
 .time-select button,
 .sound-picker button {
@@ -90,6 +91,7 @@
 
 .replay {
   height: 10%;
+  margin-top: 2em;
 }
 
 video {
@@ -130,5 +132,10 @@ video {
   .sound-picker button {
     height: 4em;
     width: 4em;
+  }
+  .rrss {
+    position: absolute;
+    bottom: 1%;
+    right: 1%;
   }
 }
